OO-3616: unify some generic elements editors
unify title, spacer and HTML raw elements editors which are common to
the form page editor and the portfolio page editor, move page editor css
to its own scss module